--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,10 @@ services:
       io.balena.features.dbus: 1
     restart: always
     network_mode: host
+  hostname:
+    image: bh.cr/g_tomas_migone1/hostname
+    restart: no                               # Required to avoid container restarting indefinitely
+    labels:
+      io.balena.features.supervisor-api: 1    # Required to interact with the supervisor
+    environment:
+      SET_HOSTNAME: balena-mfem
