--- a/mfem/Dockerfile.template
+++ b/mfem/Dockerfile.template
@@ -1,2 +1,2 @@
 FROM spack/centos-stream:latest
-CMD [ "spack", "install", "-v", "--test=all", "mfem" ]
+CMD [ "install", "-v", "--test=all", "mfem" ]
