--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
       io.balena.features.dbus: 1
     restart: always
     network_mode: host
+  
+  # https://github.com/balenablocks/hostname
   hostname:
-    image: bh.cr/g_tomas_migone1/hostname
-    restart: no                               # Required to avoid container restarting indefinitely
+    build: hostname
+    restart: no
     labels:
-      io.balena.features.supervisor-api: 1    # Required to interact with the supervisor
+      io.balena.features.supervisor-api: 1
     environment:
-      SET_HOSTNAME: balena-mfem
+      SET_HOSTNAME: mfem
